--------------------------------------------------------------------------------
drkns 2026-02-24 23:46:38+00:00 - build 6648

1. Color dialog improvements.

--------------------------------------------------------------------------------
drkns 2026-02-23 18:17:42+00:00 - build 6647

1. Correction of 6070.

--------------------------------------------------------------------------------
drkns 2026-02-21 19:21:50+00:00 - build 6646

1. Continue fullwidth-aware rendering.

--------------------------------------------------------------------------------
drkns 2026-02-19 21:12:02+00:00 - build 6645

1. More robust palette reading.

--------------------------------------------------------------------------------
drkns 2026-02-10 02:33:01+00:00 - build 6644

1. Clarify synchronisation logic.

--------------------------------------------------------------------------------
drkns 2026-02-07 19:42:24+00:00 - build 6643

1. Shift+F6 in Disk Menu changes the volume label (also gh-1072).

--------------------------------------------------------------------------------
drkns 2026-02-04 20:37:59+00:00 - build 6642

1. gh-1070: Build 6613 considers profile directory read-only under certain conditions.

--------------------------------------------------------------------------------
drkns 2026-02-03 00:20:49+00:00 - build 6641

1. Refactoring & minor fixes.

--------------------------------------------------------------------------------
birdie-github 2026-01-31 16:27:32+00:00 - build 6640

1. gh-1059: Preserve timestamps for existing destination directories.

--------------------------------------------------------------------------------
drkns 2026-01-30 20:00:26+00:00 - build 6639

1. Continue 6638.

--------------------------------------------------------------------------------
drkns 2026-01-28 22:43:59+00:00 - build 6638

1. Fix locked filter display in captionless menus.

--------------------------------------------------------------------------------