@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2026-02-27 00:03:31+00:00 - build 6649
+
+1. Implement import/export for histories and local plugin configs.
+
+--------------------------------------------------------------------------------
 drkns 2026-02-24 23:46:38+00:00 - build 6648
 
 1. Color dialog improvements.
